data/derived/fa15/progs/unify/prog2181.ml.out
Characters 169-170:
  in go (go x)
            ^
Error: This expression has type int -> int
       but an expression was expected of type int
